--- a/AppPallet/Views/BaixaPalletPage.xaml
+++ b/AppPallet/Views/BaixaPalletPage.xaml
@@ -4,11 +4,11 @@
              x:Class="AppPallet.Views.BaixaPalletPage"
              xmlns:vm="clr-namespace:AppPallet.ViewModels"
              Title="{Binding Title}">
-    
+
     <ContentPage.BindingContext>
         <vm:BaixaPalletViewModel />
     </ContentPage.BindingContext>
-    
+
     <ContentPage.Resources>
         <ResourceDictionary>
             <Color x:Key="Accent">#96d1ff</Color>
@@ -20,7 +20,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackLayout BackgroundColor="{StaticResource Accent}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill">
+        <StackLayout BackgroundColor="{StaticResource Accent}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill" IsVisible="false">
             <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Center">
                 <ContentView Padding="0,40,0,40" VerticalOptions="FillAndExpand">
                     <Image Source="xamarin_logo.png" VerticalOptions="Center" HeightRequest="64" />
@@ -29,8 +29,10 @@
         </StackLayout>
         <ScrollView Grid.Row="1">
             <StackLayout Orientation="Vertical" Padding="30,24,30,24" Spacing="10">
-                <Label Text="Start developing now" FontSize="Title"/>
-                <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="0,0,0,0"/>
+                <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                    <Label Text="Conferências" FontSize="Title"/>
+                </StackLayout>
+                <!--<Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="0,0,0,0"/>
                 <Label FontSize="16" Padding="0,24,0,0">
                     <Label.FormattedText>
                         <FormattedString>
@@ -40,11 +42,67 @@
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
-                </Label>
+                </Label>-->
+
+                <!-- Data Section -->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Label Text="Data" Grid.Column="0" VerticalOptions="Center" />
+                    <DatePicker Grid.Column="1" Format="dd/MM/yyyy" />
+
+                </Grid>
+
+                <!-- Placa Section -->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Label Text="Placa" Grid.Column="0" VerticalOptions="Center" />
+                    <Entry Grid.Column="1" Placeholder="Placa" />
+                    <Button Grid.Column="2" Text="OK" />
+
+                </Grid>
+
+                <!-- Entrega Section -->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Label Text="Entrega" FontSize="Large" VerticalOptions="Center" />
+                    <Entry Grid.Column="1" Text="0" Keyboard="Numeric" WidthRequest="60" HorizontalTextAlignment="Center" />
+
+                </Grid>
+
+                <!-- Devolução Section -->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Label Text="Devolução" FontSize="Large" VerticalOptions="Center" />
+                    <Entry Grid.Column="1" Text="0" Keyboard="Numeric" WidthRequest="60" HorizontalTextAlignment="Center" />
+
+                </Grid>
+                <!-- Buttons Section -->
+                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Margin="0,10,0,0" Padding="10">
+                    <Button Text="Gravar" WidthRequest="100" HorizontalOptions="CenterAndExpand" />
+                    <Button Text="Cancelar" WidthRequest="100" HorizontalOptions="CenterAndExpand" BackgroundColor="Red" TextColor="White"/>
+                </StackLayout>
+                
                 <Button Margin="0,10,0,0" Text="Learn more"
                         Command="{Binding OpenWebCommand}"
                         BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
+                        TextColor="White" IsVisible="false"/>
             </StackLayout>
         </ScrollView>
     </Grid>
