--- a/AppPallet/Views/ItemsPage.xaml
+++ b/AppPallet/Views/ItemsPage.xaml
@@ -8,12 +8,29 @@
              x:Name="BrowseItemsPage">
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Command="{Binding AddItemCommand}" />
+        <!--<ToolbarItem Text="Add" Command="{Binding AddItemCommand}"  />-->
     </ContentPage.ToolbarItems>
+    <AbsoluteLayout>
+        <!-- Imagem de fundo -->
+        <Image Source="xamarin_logo.png"
+               AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
+               AbsoluteLayout.LayoutFlags="All" />
+
+        <!-- Potinhos -->
+        <Image x:Name="Potinho1" Source="potinho1.png"
+               AbsoluteLayout.LayoutBounds="0.1, 0.1, 50, 50"
+               AbsoluteLayout.LayoutFlags="PositionProportional" />
+        <Image x:Name="Potinho2" Source="potinho2.png"
+               AbsoluteLayout.LayoutBounds="0.1, 0.1, 50, 50"
+               AbsoluteLayout.LayoutFlags="PositionProportional" />
+        <Image x:Name="Potinho3" Source="potinho3.png"
+               AbsoluteLayout.LayoutBounds="0.1, 0.1, 50, 50"
+               AbsoluteLayout.LayoutFlags="PositionProportional" />
+    </AbsoluteLayout>
     <!--
       x:DataType enables compiled bindings for better performance and compile time validation of binding expressions.
       https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/data-binding/compiled-bindings
-    -->
+    
     <RefreshView x:DataType="local:ItemsViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
         <CollectionView x:Name="ItemsListView"
                 ItemsSource="{Binding Items}"
@@ -40,5 +57,7 @@
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
-    </RefreshView>
+    </RefreshView>-->
+
+
 </ContentPage>
