--- a/AppPallet/Views/BaixaPalletPage.xaml
+++ b/AppPallet/Views/BaixaPalletPage.xaml
@@ -70,7 +70,7 @@ xmlns:sfDatePicker="clr-namespace:Syncfusion.XForms.Pickers;assembly=Syncfusion.
 
                     <Label Text="Data  " FontSize="Medium" Grid.Column="0" VerticalOptions="Center" />
                     <Frame BorderColor="LightBlue" Grid.Column="1" Padding="10,0,10,0" CornerRadius="5" HorizontalOptions="FillAndExpand">
-                        <local:CustomDatePicker x:Name="dataDatePicker" Format="dd/MM/yyyy" BackgroundColor="Transparent" />
+                        <local:CustomDatePicker x:Name="dataDatePicker" IsEnabled="false" Format="dd/MM/yyyy" BackgroundColor="Transparent" />
                     </Frame>
                 </Grid>
 
@@ -84,7 +84,7 @@ xmlns:sfDatePicker="clr-namespace:Syncfusion.XForms.Pickers;assembly=Syncfusion.
 
                     <Label Text="Placa" FontSize="Medium" Grid.Column="0" VerticalOptions="Center" />
                     <Frame BorderColor="LightBlue" Grid.Column="1" Padding="10,0,10,0" CornerRadius="5" HorizontalOptions="FillAndExpand">
-                        <local:CustomEntry x:Name="placaEntry" Placeholder="Placa" BackgroundColor="Transparent" />
+                        <local:CustomEntry x:Name="placaEntry" IsReadOnly="True" Placeholder="Placa" BackgroundColor="Transparent" />
                     </Frame>
                     <Frame Grid.Column="2" BackgroundColor="Transparent" WidthRequest="80"></Frame>
                     <!--<Button Grid.Column="2" Text="OK" BackgroundColor="LightBlue" TextColor="White" />-->
@@ -99,7 +99,7 @@ xmlns:sfDatePicker="clr-namespace:Syncfusion.XForms.Pickers;assembly=Syncfusion.
 
                     <Label Text="Entrega" FontSize="Large" VerticalOptions="Center" />
                     <Frame BorderColor="LightBlue" Grid.Column="1" Padding="10,0,10,0" CornerRadius="5" HorizontalOptions="FillAndExpand">
-                        <local:CustomEntry x:Name="entregaEntry" Keyboard="Numeric" WidthRequest="60" HorizontalTextAlignment="Center" BackgroundColor="Transparent" />
+                        <local:CustomEntry x:Name="entregaEntry" IsReadOnly="True" Keyboard="Numeric" WidthRequest="60" HorizontalTextAlignment="Center" BackgroundColor="Transparent" />
                     </Frame>
                 </Grid>
 
@@ -112,7 +112,7 @@ xmlns:sfDatePicker="clr-namespace:Syncfusion.XForms.Pickers;assembly=Syncfusion.
 
                     <Label Text="Devolução" FontSize="Large" VerticalOptions="Center" />
                     <Frame BorderColor="LightBlue" Grid.Column="1" Padding="10,0,10,0" CornerRadius="5" HorizontalOptions="FillAndExpand">
-                        <local:CustomEntry x:Name="devolucaoEntry" Keyboard="Numeric" WidthRequest="60" HorizontalTextAlignment="Center" BackgroundColor="Transparent" />
+                        <local:CustomEntryEnable x:Name="devolucaoEntry" Keyboard="Numeric" WidthRequest="60" HorizontalTextAlignment="Center" BackgroundColor="Transparent" />
                     </Frame>
                 </Grid>
 
