--- a/AppPallet/Views/CopaPalletPage.xaml
+++ b/AppPallet/Views/CopaPalletPage.xaml
@@ -22,7 +22,30 @@
                  AbsoluteLayout.LayoutBounds="0, 0, 10, 10"
                  AbsoluteLayout.LayoutFlags="PositionProportional" />
         <BoxView x:Name="PotinhoAzul" Color="Blue"
-         AbsoluteLayout.LayoutBounds="0, 0, 10, 10"
-         AbsoluteLayout.LayoutFlags="PositionProportional" />
+                 AbsoluteLayout.LayoutBounds="0, 0, 10, 10"
+                 AbsoluteLayout.LayoutFlags="PositionProportional" />
+
+        <!-- Texto com as datas -->
+        <Label 
+               Text="Período Atual"
+               AbsoluteLayout.LayoutBounds="0.5, 0, 1, AutoSize"
+               AbsoluteLayout.LayoutFlags="WidthProportional"
+               HorizontalTextAlignment="Center"
+               VerticalTextAlignment="Start"
+               Margin="0,45,0,0"
+               TextColor="Black"
+               FontSize="16"
+               FontAttributes="Bold"
+               LineBreakMode="WordWrap"/>
+        <Label x:Name="DataLabel"
+        AbsoluteLayout.LayoutBounds="0.5, 0, 1, AutoSize"
+        AbsoluteLayout.LayoutFlags="WidthProportional"
+        HorizontalTextAlignment="Center"
+        VerticalTextAlignment="Start"
+        Margin="0,65,0,0"
+        TextColor="Black"
+        FontSize="16"
+        FontAttributes="Bold"
+        LineBreakMode="WordWrap"/>
     </AbsoluteLayout>
 </ContentPage>
